Change base docker image from python3.8:buster to ubuntu:20.04 Ubuntu has better compatibility with data scientists

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,4 +1,10 @@
-FROM python:3.7-buster
+FROM ubuntu:20.04
+
+RUN apt-get update && \
+    apt-get upgrade -y && \
+    apt-get install -y git
+
+RUN apt-get install python3-pip -y
 
 ADD trainer.sh /home
 WORKDIR /home
