Fix docker build image issue (not building in hydra package folder

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,6 +1,6 @@
 FROM continuumio/miniconda3
 
-ADD docker/executor.sh /home
+ADD executor.sh /home
 WORKDIR /home
 
 ENTRYPOINT ["sh", "executor.sh"]
