Fail pytest if test covergrage below 90%

--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -40,4 +40,4 @@ jobs:
         pytest
     - name: Display test coverage
       run: |
-        pytest --cov=. tests/
+        pytest --cov=. --cov-fail-under=90 tests/
