--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -41,4 +41,4 @@ jobs:
     - name: Display test coverage
       run: |
         # pytest --cov=. --cov-fail-under=50 tests/
-        pytest tests/test_cli.py
+        pytest tests/test_git_repo.py
