--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -40,4 +40,4 @@ jobs:
         pytest
     - name: Display test coverage
       run: |
-        pytest --cov=. --cov-fail-under=75 tests/
+        pytest tests/test_git_repo.py
