update docker container to connect to batch database

--- a/hydra/docker/Dockerfile
+++ b/hydra/docker/Dockerfile
@@ -1,5 +1,5 @@
 FROM continuumio/miniconda3
 WORKDIR /home
-RUN pip install awscli
+RUN pip install awscli boto3 mysql-connector
 COPY entry.py .
 ENTRYPOINT ["python", "entry.py"]
